crates/crucible-tui/src/key_panel/snapshots/crucible_tui__key_panel__tests__empty@80.snap
---
source: crates/crucible-tui/src/key_panel/tests.rs
expression: "picture(&anthropic(0).rows(80, Glyphs::Unicode), 80)"
---
<Accent>────────────────────────────────────────────────────────────────────────────────</>

<Strong>Log in</>

<Accent>›</> Anthropic — provide your own API key

Paste or type the key. It goes to crucible's protected store and is never shown.

<Quiet>╭── Anthropic API key ─────────────────────────────────────────────────────────╮</>
<Quiet>│</> <Accent>›</>                                                                            <Quiet>│</>
<Quiet>╰──────────────────────────────────────────────────────────────────────────────╯</>
<Quiet>paste or type your API key · esc to cancel</>
